fix flickering issue on first load

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
 
   overflow: hidden;
   border-radius: 2px;
+  transform: translateY(-50px) scale(0.2);
+  opacity: 0;
 }
 
 .carousel-slide {
